--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-# Travis
+<!DOCTYPE html>
+<head>
+<title>海の絶滅危惧種について</title>
+
+<h1>二ホンウナギ</h1>
+<p>分類：ウナギ科ウナギ属</p>
+<p>分布：東アジア全域</p>
+　<p>二ホンウナギとは？</p>
+<p>体は細長い円筒形で、体の背側は褐色または灰緑色、腹側は薄卵色をしている。</p>
+<p>成魚は全長約60㎝、最大で130㎝にもなる回遊魚である。</p>
+<p>外洋のマリアナ諸島西方海域で産卵した後、沿岸域に移動しそこで成長し、やがて外洋の産卵場まで戻り死亡する。</p>
+<p>東アジア全域に分布しながらも、同じ場所で繁殖する二ホンウナギは、どの国家にも帰属しない、東アジア全域の共有資源である。</p>
+
+<img src="https://zukan.com/media/leaf/original/91819.jpg" alt="ニホンウナギ"/>
+　<p>現状</p>
+<p>二ホンウナギの漁獲量は1970年代以降減少し続けており、1960年代と比べると現在の漁獲量は1/4以下の水準となっている。</p>
+<p>そして、2014年には二ホンウナギは絶滅危惧種ⅠB種(近い将来における野生での絶滅の危険性が高いもの)に指定された。</p>
+<h1>原因</h1>
+<p>①乱獲</p>
+<p>養殖に使用される二ホンウナギの稚魚の約半数は密漁など違法取引された疑いがあると言われている。</p>
+<p>このような違法取引が続けば、二ホンウナギの個体数を管理できず、ますます減少の一途を辿ることになる。</p>
+<p>②生息域の環境変化</p>
+<p>地球温暖化により海水温度の上昇、海流の変化の現象起きている。</p>
+<p>二ホンウナギはマリアナ海嶺で産卵し、海流に乗って東アジアの河川に移動してそこで成長するという生態を持つ。</p>
+<p>海水温度が上昇してしまうと、産卵地点が南に下がるため成長の場である東アジアまでたどり着かなくなってしまうと予想される。</p>
+<p>このように地球温暖化は二ホンウナギの回遊経路を大きく変えてしまうため、このまま地球温暖化が進めば二ホンウナギの繁殖はより進まなくなる。</p>
+<p> また、ダム建設など河川や湖沼の護岸工事により生息域そのものが奪われている。</p>
+<p> これは生息域そのものを直接奪う行為に当たるため、ウナギの繁殖の大きな妨げとなっている。</p>
+
+<h1>解決策</h1>
+<p>①国際規制の推進</p>
+<p>日本、中国、台湾は二ホンウナギの違法取引を公的に認め、 2012年に「ウナギの国際的資源保護・管理に係る非公式協議」を開始した。</p>
+<p>これは2007年ごろ香港への密輸を通して日本に公的に輸入する闇ルートの取引が発覚したことがきっかけであった。</p>
+<p> しかし現在の国際規制では強制力が弱いため、より強制的な国際規制の実施が議論されている。</p>
+<p>二ホンウナギは生息域が広いため、こうした周辺諸国との国際規制のもと資源保護を行う必要がある。</p>
+<p> ②生息域の整備</p>
+<p>護岸工事等で水際がコンクリートで隙間なく覆われていると、餌、または二ホンウナギ自身の隠れ場所を奪うことになる。</p>
+<p> そのため工事の際には生息地となる川底や川岸の環境を改善する取組みが同時に行われている。</p>
+<p> 人工的な水際ではなく土と植生が存在する水際の確保などを通して、二ホンウナギの生息環境の保護を図っている。</p>
+
+<p>引用　https://bd-wakamono.net/wakawakanikki/04-japaneel/　https://www.jfa.maff.go.jp/j/saibai/attach/pdf/unagi-37.pdf</p>
+
+
+<h2>ウミガメ</h2>
+<p>分類：カメ目ウミガメ上科</p>
+<p>分布：太平洋、大西洋、インド洋など幅広く生殖している</p>
+ <p>ウミガメとは？</p>
+<p>体色は背面が褐色、腹面は淡黄色で日本に訪れるアオウミガメはほかのウミガメよりも大きい頭を持っている。</p>
+<p>貝やヤドカリ、海藻などを餌にして食べている。</p>
+<p>ウミガメは現在地球上に7種存在し、そのうちの5種が広く分布している</p>
+<p>各地に産卵場所を置いているが、日本では本州、四国、九州、沖縄の海岸線に産卵場があり、北太平洋では唯一の産卵場所である</p>
+<p>種や住んでいる環境によって変わってくるが、かなり寿命の長い動物である</p>
+<img src="https://p4.wallpaperbetter.com/wallpaper/127/76/920/sea-turtle-wallpaper-preview.jpg" alt="ウミガメ"/>
+
+<p>現状</p>
+<p>ウミガメは現在、絶滅危惧種IB類(EN)に区分されている。</p>
+<h1>原因</h1>
+<p>①違法な取引や密猟</p>
+<p>ウミガメは食用にもなるため、海岸地域に住む人々にとっては魅力的な食材とされてきた。</p>
+<p>栄養価の高い食物であるため違法取引が行われている。</p>
+<p>また、ウミガメの皮を使ってブーツなどが違法な行為であるにもかかわらず作られている。</p>
+<p>②プラスチックゴミによる海の汚染</p>
+<p>人間が捨てたゴミによって、それをウミガメが食べてしまったり、体に絡まったりするなどの被害が起きている。</p>
+<p>海には既に1億5000万トンのゴミがあり、2050年を超えるとますます増大すると考えられている。</p>
+<p>ウミガメのプラスチックを摂取している割合は52％にのぼり、満腹だと勘違いをして食事を取らなくなり絶滅に繋がっていく。</p>
+
+<h1>解決策</h1>
+<p>①条約をつくる</p>
+<p>条約を作ることにより、取締りが強化され改善される。</p>
+<p>実際に2016年に起きた事件で、マレーシアの警察がウミガメの卵1万9000個を押収したということがあり、5年の懲役もしくは130万の罰金を科されるという。</p>
+<p>このように日本でも同じような条約や制度を作ることによって悪さをする人が減ると考えられる。</p>
+<p>②プラスチック製品について考える</p>
+<p>私たちの身の回りにあるものはたくさんのプラスチックで溢れかえっている。</p>
+<p>2022年の10月にはマクドナルドがプラスチックストローから紙ストローへと変化させている。</p>
+<p>日本は1人当たりのパッケージ用プラスチックのゴミ発生量が世界で2番目に多い</p>
+<p>そのためマイバックやマイボトルなどを持ち歩き、レジ袋やペットボトル自体の利用を減らしていくことが海の汚染改善に繋がっていくと考えられる。</p>
+
+<P>引用　https://ikilog.biodic.go.jp/Rdb/zukan?_action=rn030　https://www.city.fukutsu.lg.jp/soshiki/umigame/kankyo/2/2/1/1061.html　https://group.ntt/jp/environment/column/earth/no04.html</p>
+
+<p>以上よりどちらも深刻な状況である。</p>
+<p>今回、海の生物の例は二つあげたがまだ多くの海の生き物は存在している。</p>
+<p>原因として私たち人間がしてきたことも深く関係しているため、今後どうしていかなければならないのか一人一人考えながら生活をしてほしい。</p>
+
+
